# sorceress

./: .gitattributes  .travis.yml  153_255_255.js  1631656653256-README.html  404.html  CHANGELOG.txt  EyeMovements.html  Graypsychophysics  LICENCE.txt  LICENSE  README.html  README.md  README.rst  README.txt  __init__.py  asahi.html  blindness.html  blindness2.html  blue_white.html  blueyellow.html  bright.html  cafter.html  circle.html  crazyeeg.html  crazysin.html  depth.html  direction.html  eyes.html  footsteps.html  footstepsScript.js  index.html  length.html  lilac.html  lilacv2.html  mkdocs.yml  motion.js  phi.html  pyproject.toml  rotatingObjects.js  rotatingobjects.html  (+5 more)
.circleci/: config.yml
.github/: FUNDING.yml
R/: colouredrays.r
api_reference/: index.html
contribution/: index.html
docs/: api_reference.md  blindness.html  bright.html  cafter.html  circle.html  contribution.md  crazyeeg.html  depth.html  explanations of illusions.md  eyes.html  index.md  jsanimations.md  length.html  lilac.html  phi.html  spatialmotion.html  steps.html
explanations of illusions/: index.html
javascripts/: CirclesrotatingRight.js  EyeMovements.js  Flash_Suppression.js  Spatial_Vision_for_Action.js  TheLilac.js  (+6 more)
sorceress/: README.md  README.rst  __init__.py  api_reference.md  mkdocs.yml  paper.bib  paper.md  pyproject.toml  sorceress.py  test___init__.py
sorceress/docs/: api_reference.md  explanations of illusions.md  eyes.html  index.md  jsanimations.md
sorceress/sorceress/: __init__.py  sorceress.py
sorceress/tests/: __init__.py  test_sorceress.py
(+48 files in other folders)
