[tool.poetry]
name = "sorceress"
version = "1.8.6"
description = "Python package for creating optical illusions"
authors = ["altunenes <enesaltun2@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/altunenes/sorceress"

keywords = ["optical-illusions","illusions","python","perception" ,"image processing","psychology","vision","neuroscience","altunenes"]

classifiers = [
        "License :: OSI Approved :: MIT License",

    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9"

]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
